Добавил создание одного пакета

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["sinitcin <antony@email.su>"]
 
 [dependencies]
-serial="0.4"
-uuid={ version = "0.5", features = ["v4"] }
-byteorder="1.2"
+serial = "0.4"
+uuid = { version = "0.5", features = ["v4"] }
+byteorder = "1.2"
+crc = "^1.0.0"
